# paper_reviewer

./: .gitignore  README.md  pyproject.toml  web.py
src/paper_reviewer/: __init__.py  apis.py  app.py  cli.py  llm.py  models.py  pipeline.py  report_html.py
src/paper_reviewer/stages/: __init__.py  _json_utils.py  checklist.py  citation.py  claims.py  consistency.py  limitations.py  parser.py  report.py  repro.py  theory.py
