[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-reviewer"
version = "0.1.0"
description = "Automated paper review: citation verification, claim checking, reproducibility scoring"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "pymupdf4llm>=0.0.17",
    "ollama>=0.4.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "gradio>=4.0",
    "json-repair>=0.30.0",
]

[project.scripts]
paper-reviewer = "paper_reviewer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
